[package]
name = "cyberclub"
version = "0.1.2"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.2", features = ["debug"] }
gmeta = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }
cyberclub-io = { path = "io" }
cyberclub-state = { path = "state" }
hashbrown = "0.14"


[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.2", features = ["wasm-opt"] }
cyberclub-io = { path = "io" }
cyberclub-state = { path = "state" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.2" }