[package]
name = "state"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = "1.4.0"
gmeta = "1.4.0"
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
io = { path = "../io" }

[build-dependencies]
gear-wasm-builder = "1.4.0"

[features]
binary-vendor = []
default = ["binary-vendor"]